--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "/React-Website/",
   "name": "react-website",
   "private": true,
   "version": "0.0.0",
@@ -15,7 +16,8 @@
     "@mui/icons-material": "^5.14.7",
     "@mui/material": "^5.14.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
