--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@mui/material": "^5.14.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "react-unity-webgl": "^9.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
