settings base url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "/React-Website/",
+  "homepage": "https://maurice-h.github.io/React-Website/",
   "name": "react-website",
   "private": true,
   "version": "0.0.0",
